--- a/general_demo/sample_model/mobile.yaml
+++ b/general_demo/sample_model/mobile.yaml
@@ -61,7 +61,7 @@ MODEL:
   PRETRAINED: ''
   TAG_PER_JOINT: True
 TEST:
-  FLIP_TEST: True
+  FLIP_TEST: False
   IMAGES_PER_GPU: 1
   MODEL_FILE: ''
   SCALE_FACTOR: [1]
